--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,8 @@ asgiref==3.11.0
     #   django-cors-headers
 attrs==25.4.0
     # via
+    #   jsonschema
+    #   referencing
     #   service-identity
     #   twisted
 autobahn==25.12.2
@@ -46,11 +48,20 @@ django==5.2.9
     #   channels
     #   django-cors-headers
     #   djangorestframework
+    #   djangorestframework-simplejwt
+    #   drf-spectacular
 django-cors-headers==4.9.0
     # via -r requirements.in
 django-environ==0.12.0
     # via -r requirements.in
 djangorestframework==3.16.1
+    # via
+    #   -r requirements.in
+    #   djangorestframework-simplejwt
+    #   drf-spectacular
+djangorestframework-simplejwt==5.5.1
+    # via -r requirements.in
+drf-spectacular==0.29.0
     # via -r requirements.in
 hyperlink==21.0.0
     # via
@@ -62,12 +73,20 @@ idna==3.11
     #   twisted
 incremental==24.11.0
     # via twisted
+inflection==0.5.1
+    # via drf-spectacular
+jsonschema==4.25.1
+    # via drf-spectacular
+jsonschema-specifications==2025.9.1
+    # via jsonschema
 msgpack==1.1.2
     # via
     #   autobahn
     #   channels-redis
 packaging==25.0
     # via incremental
+pillow==12.0.0
+    # via -r requirements.in
 psycopg2-binary==2.9.11
     # via -r requirements.in
 py-ubjson==0.16.1
@@ -80,10 +99,22 @@ pyasn1-modules==0.4.2
     # via service-identity
 pycparser==2.23
     # via cffi
+pyjwt==2.10.1
+    # via djangorestframework-simplejwt
 pyopenssl==25.3.0
     # via twisted
+pyyaml==6.0.3
+    # via drf-spectacular
 redis==7.1.0
     # via channels-redis
+referencing==0.37.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+rpds-py==0.30.0
+    # via
+    #   jsonschema
+    #   referencing
 service-identity==24.2.0
     # via twisted
 sqlparse==0.5.5
@@ -96,5 +127,7 @@ typing-extensions==4.15.0
     # via twisted
 ujson==5.11.0
     # via autobahn
+uritemplate==4.2.0
+    # via drf-spectacular
 zope-interface==8.1.1
     # via twisted
