--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^14.1.0",
+    "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,7 +28,8 @@
     "reka-ui": "^2.6.1",
     "tailwind-merge": "^3.4.0",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue3-apexcharts": "^1.10.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
